--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html{
+  scroll-behavior: smooth;
+}
+body{
+  font-family: Arial, Helvetica, Sans-serif;  
+  margin:0;
+  background-color:#ffe6b3;
+}
+header{
+  overflow: auto;
+}
+
+#content{
+  background-color: #ffe6b3;
+  float: left;
+  width: 75%;
+  height: 2000px;
+  margin-top: 0;
+  text-align: justify;
+  padding:5px;
+}
+
+#main{
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 150px;
+  background-image: url(https://cdn.shopify.com/s/files/1/0668/9223/products/thestrokescaramel_1024x1024.jpg?v=1528659933);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+}
